@@ -8,6 +8,7 @@ import com.codestates.TILTILE.auth.utils.CustomAuthorityUtils;
 import com.codestates.TILTILE.member.service.MemberService;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -17,12 +18,13 @@ import org.springframework.security.config.annotation.web.configuration.EnableWe
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.authentication.logout.HttpStatusReturningLogoutSuccessHandler;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity(debug = true)
@@ -40,9 +42,9 @@ public class SecurityConfiguration {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .headers().frameOptions().sameOrigin() //    동일 출처로부터 들어오는 request만 페이지 렌더링을 허용
+                .headers().frameOptions().sameOrigin() //    동일 출처로부터 들어오는 request 만 페이지 렌더링을 허용
                 .and()
-                .csrf().disable() // CSRF 공격에 대한 Spring Security에 대한 설정을 비활성화
+                .csrf().disable() // CSRF 공격에 대한 Spring Security 에 대한 설정을 비활성화
                 .cors(Customizer.withDefaults()) // CORS 설정을 추가
                 .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 .and()
@@ -60,7 +62,14 @@ public class SecurityConfiguration {
                 .apply(new CustomFilterConfigurer())
                 .and()
                 .authorizeHttpRequests(authorize -> authorize
-                        .antMatchers(HttpMethod.POST, "/*/members").permitAll()
+                        .antMatchers(HttpMethod.POST, "/members").permitAll() // 회원가입(*)
+                        .antMatchers(HttpMethod.POST, "/login/mailConfirm").permitAll()  // 이메일 인증(*)
+                        .antMatchers(HttpMethod.POST, "/til").hasRole("USER") // Til 작성(USER)
+                        .antMatchers(HttpMethod.PUT, "/til/**").hasRole("USER") // Til 수정(USER)
+                        .antMatchers(HttpMethod.DELETE, "/til/**").hasRole("USER") // Til 삭제(USER) spring secured URLs not found
+                        .antMatchers(HttpMethod.POST, "/bookmark/**").hasRole("USER") // 북마크 추가(USER)
+                        .antMatchers(HttpMethod.DELETE, "/bookmark/**").hasRole("USER") // 북마크 삭제(USER)
+                        .antMatchers(HttpMethod.GET, "/bookmark/**").hasRole("USER") // 마이페이지 조회(북마크), (USER)
                         .anyRequest().permitAll() // 모든 HTTP request 요청에 대해서 접근을 허용
                 )
                 .oauth2Login(oauth2 -> oauth2
@@ -68,40 +77,43 @@ public class SecurityConfiguration {
         return http.build();
     }
 
-    // 구체적인 CORS 정책을 설정
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*")); // 모든 출처(Origin)에 대해 스크립트 기반의 HTTP 통신 허용
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PATCH", "DELETE")); // 허용되는 HTTP 메소드 지정
+        CorsConfiguration corsConfiguration = new CorsConfiguration();
+        corsConfiguration.setAllowCredentials(true);
+        corsConfiguration.setAllowedOrigins(List.of("http://tiltil2-images.s3-website.ap-northeast-2.amazonaws.com"));
+        corsConfiguration.setAllowedHeaders(List.of("*"));
+        corsConfiguration.setExposedHeaders(List.of("Authorization", "Refresh"));
+        corsConfiguration.setAllowedMethods(List.of("POST", "GET", "PATCH", "PUT", "DELETE", "OPTIONS"));
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // 모든 URL에 대해 CORS 정책 적용
-        return source;
+        // Add CORS headers for preflight response
+        corsConfiguration.addAllowedMethod(HttpMethod.OPTIONS);
+        corsConfiguration.addAllowedHeader(HttpHeaders.ORIGIN);
+        corsConfiguration.addAllowedHeader(HttpHeaders.CONTENT_TYPE);
+        corsConfiguration.addAllowedHeader(HttpHeaders.ACCEPT);
+
+        UrlBasedCorsConfigurationSource urlBasedCorsConfigurationSource = new UrlBasedCorsConfigurationSource();
+        urlBasedCorsConfigurationSource.registerCorsConfiguration("/**", corsConfiguration);
+        return urlBasedCorsConfigurationSource;
     }
+
 
     public class CustomFilterConfigurer extends AbstractHttpConfigurer<CustomFilterConfigurer, HttpSecurity> {
         @Override
         public void configure(HttpSecurity builder) throws Exception {
             AuthenticationManager authenticationManager = builder.getSharedObject(AuthenticationManager.class);
 
+            JwtVerificationFilter jwtVerificationFilter = new JwtVerificationFilter(jwtTokenizer, authorityUtils);
+
             JwtAuthenticationFilter jwtAuthenticationFilter = new JwtAuthenticationFilter(authenticationManager, jwtTokenizer);
             jwtAuthenticationFilter.setFilterProcessesUrl("/login");
             jwtAuthenticationFilter.setAuthenticationSuccessHandler(new MemberAuthenticationSuccessHandler(jwtTokenizer));
             jwtAuthenticationFilter.setAuthenticationFailureHandler(new MemberAuthenticationFailureHandler());
 
-            JwtVerificationFilter jwtVerificationFilter = new JwtVerificationFilter(jwtTokenizer, authorityUtils);
-
-
             builder
-                    .addFilter(jwtAuthenticationFilter)
+                    .addFilterAfter(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
                     .addFilterAfter(jwtVerificationFilter, JwtAuthenticationFilter.class);
         }
     }
 
-    @Bean
-    public LogoutFilterConfigurer logoutConfigurer() {
-        return new LogoutFilterConfigurer();
-    }
 }
-
